fix] style for project on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,17 @@ html, body {
   #about hr, #contact hr {
     margin: 8% auto;
   }
+
   #contact {
     text-align: center;
   }
+
   video {
     transform: translateX(-85%) translateY(-50%);
+  }
+
+  .navbar {
+    padding-right: 0px;
   }
 
 }
@@ -35,13 +41,6 @@ html, body {
   padding-right: 50px;
   font-family: 'Alegreya Sans', sans-serif;
 }
-
-@media(max-width:768px) {
-  .navbar {
-    padding-right: 0px;
-  }
-}
-
 
 .navbar .nav .nav-item .nav-link {
   color: #fff;
@@ -158,7 +157,7 @@ video {
 }
 
 .card-img-top {
-  height: 100%;
+  height: 285px;
   width: 100%;
 }
 
@@ -396,8 +395,8 @@ video {
 }
 
 #skill1 li {
-	margin-bottom:50px;
-	background:#e9e5e2;
+  margin-bottom:50px;
+  background:#e9e5e2;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#e1ddd9), to(#e9e5e2));
 	background-image: -webkit-linear-gradient(top, #e1ddd9, #e9e5e2);
 	background-image: -moz-linear-gradient(top, #e1ddd9, #e9e5e2);
